<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.fragments.Chart.ChartFragment">


    <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/marketPriceChart"
            android:layout_width="match_parent"
            android:layout_height="250dp" android:layout_marginTop="116dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
    />


    <LinearLayout
            android:id="@+id/linear"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/marketPriceChart"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp">

        <Button
                android:text="@string/button_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="#ffffff"
                android:background="@drawable/period_button"
                android:id="@+id/buttonWeek"
        />
        <Button
                android:text="@string/button_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="#ffffff"
                android:background="@drawable/period_button"
                android:id="@+id/buttonMonth"/>
        <Button
                android:text="@string/button_three_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="#ffffff"
                android:background="@drawable/period_button"
                android:id="@+id/buttonThreeMonths"/>
        <Button
                android:text="@string/button_six_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:textColor="#ffffff"
                android:background="@drawable/period_button"
                android:id="@+id/buttonSixMonths"
        />

    </LinearLayout>
    <TextView
            android:text="@string/title_chart_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleHistory"
            android:textSize="@dimen/large_font"
            app:layout_constraintBottom_toTopOf="@+id/marketPriceChart"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="35dp" app:layout_constraintTop_toTopOf="parent"/>


    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progressBar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.331"/>


    <!--</FrameLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>