<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        tools:context=".ui.main.fragments.Main.MainFragment">

    <TextView
            android:text="@string/title_bitcoin"
            android:textSize="@dimen/large_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleBitcoin"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/titleActualPrice"/>


    <TextView
            android:text="@string/price_bitcoin"
            android:textSize="@dimen/large_font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleActualPrice"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linear" android:layout_marginTop="25dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.713"/>


    <LinearLayout
            android:gravity="center"
            android:id="@+id/linear"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginBottom="264dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
    >


        <TextView
                android:id="@+id/dolarSymbol"
                android:layout_width="wrap_content"
                android:textSize="@dimen/extra_large_font"
                android:text="@string/dolar_symbol"
                android:layout_height="wrap_content"
        />

        <TextView
                android:id="@+id/valueBitcoin"
                android:layout_width="wrap_content"
                android:textSize="@dimen/extra_large_font"
                android:text="@string/value_bitcoin_defautl"
                android:layout_height="wrap_content"
        />


    </LinearLayout>


    <!--<com.github.mikephil.charting.charts.LineChart-->
    <!--android:id="@+id/marketPriceChart"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="200dp" android:layout_marginTop="80dp"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--android:layout_marginEnd="8dp" android:layout_marginRight="8dp"-->
    <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--app:layout_constraintHorizontal_bias="1.0"-->
    <!--android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button"-->
    <!--app:layout_constraintVertical_bias="0.362"/>-->
    <!--<Button-->
    <!--android:text="Button"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:id="@+id/button"-->
    <!--app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"-->
    <!--android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"-->
    <!--android:layout_marginLeft="8dp" android:layout_marginStart="8dp"-->
    <!--app:layout_constraintBottom_toTopOf="@+id/nav_view" android:layout_marginTop="8dp"-->
    <!--app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.498"-->
    <!--app:layout_constraintVertical_bias="0.657"/>-->

<!--</FrameLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>